--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-2014-04-07 Thomas Scheibitz  <mail@kreativschmiede-eichsfeld.de>
+2014-06-26 Thomas Scheibitz  <mail@kreativschmiede-eichsfeld.de>
+	- 0.3.7
+
+	* bugfix Radiussearch
+
+2014-06-26 Thomas Scheibitz  <mail@kreativschmiede-eichsfeld.de>
 	- 0.3.6
 
 	* bugfix SQL injection
