[FEATURE] close infowindow by click on googlemaps map
Resolved #53605

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2014-06-28 Thomas Scheibitz  <typo3@scheibitz.com>
 	- 0.4.0
 
+	* close infowindow by click on googlemaps map
 	* display all addresses if no value in selectbox selected
 	* bugfix jQuery example in setup.txt
 	* bugfix for TYPO3 Version 6.2.x
