--- a/Resources/Private/Language/locallang_db_new_content_el.xlf
+++ b/Resources/Private/Language/locallang_db_new_content_el.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff version="1.0">
-  <file source-language="en" datatype="plaintext" original="messages" date="2016-12-08T22:57:04+00:00" product-name="mask_example">
+  <file source-language="en" datatype="plaintext" original="messages" date="2016-12-08T23:07:05+00:00" product-name="st_address_map">
     <header/>
     <body>
       <trans-unit id="wizards.newContentElement.st_addressmap_title" xml:space="preserve">
