[TASK] add new configuration

--- a/Resources/Private/Language/locallang_db_new_content_el.xlf
+++ b/Resources/Private/Language/locallang_db_new_content_el.xlf
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff version="1.0">
-  <file source-language="en" datatype="plaintext" original="messages" date="2016-12-13T15:54:53+00:00" product-name="st_address_map">
+  <file source-language="en" datatype="plaintext" original="messages" date="2016-12-13T17:02:43+00:00" product-name="st_address_map">
     <header/>
     <body>
-      <trans-unit id="wizards.newContentElement.st_addressmap_title" xml:space="preserve">
+      <trans-unit id="wizards.newContentElement.st_address_map_title" xml:space="preserve">
         <source>Address visualization with Google Maps</source>
       </trans-unit>
-      <trans-unit id="wizards.newContentElement.st_addressmap_description" xml:space="preserve">
+      <trans-unit id="wizards.newContentElement.st_address_map_description" xml:space="preserve">
         <source>With the element you are able to show addresses out of tt_address in Google Maps.</source>
       </trans-unit>
     </body>
