--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff version="1.0">
-  <file source-language="en" datatype="plaintext" original="messages" date="2016-12-13T15:54:53+00:00" product-name="st_address_map">
+  <file source-language="en" datatype="plaintext" original="messages" date="2016-12-13T17:02:43+00:00" product-name="st_address_map">
     <header/>
     <body>
-      <trans-unit id="tt_content.tx_staddressmap_st_addressmap_addresselement" xml:space="preserve">
-        <source>Addresslist Element</source>
+      <trans-unit id="tt_content.tx_staddressmap_addresses" xml:space="preserve">
+        <source>Addresses</source>
       </trans-unit>
-      <trans-unit id="tt_content.tx_staddressmap_st_addressmap_mapheight" xml:space="preserve">
+      <trans-unit id="tt_content.tx_staddressmap_mapheight" xml:space="preserve">
         <source>Map height</source>
       </trans-unit>
       <trans-unit id="tt_content.CType.div._staddressmap_" xml:space="preserve">
         <source>st_address_map</source>
       </trans-unit>
-      <trans-unit id="tt_content.CType.staddressmap_st_addressmap" xml:space="preserve">
+      <trans-unit id="tt_content.CType.staddressmap_st_address_map" xml:space="preserve">
         <source>Address visualization with Google Maps</source>
       </trans-unit>
       <trans-unit id="tt_content.colPos.nestedContentColPos" xml:space="preserve">
